--- a/server.cfg
+++ b/server.cfg
@@ -1,18 +1,26 @@
+# Console
 echo Executing Server Config...
-lanmode 0
 rcon_password changeme
-maxplayers 50
-maxnpc 0
-port 7777
-hostname PowerPC603 trucking server
+rcon 1
+
+# Scripts
 gamemode0 PPC_Trucking 1
 filterscripts gl_realtime gl_actions
 plugins sscanf streamer
+
+# Server browser
 announce 0
 query 1
+hostname PowerPC603 Trucking Server
+language English
+mapname San Andreas
+gamemodetext Transportation / Trucking
 weburl www.sa-mp.com
-onfoot_rate 40
-incar_rate 40
-weapon_rate 40
-stream_distance 300.0
-stream_rate 1000
+maxplayers 50
+
+# Networking
+# bind 123.456.789.000
+port 7777
+
+# NPC
+maxnpc 0
