Add full timestamp
Update logtimeformat in server configuration file and extend with date.

--- a/server.cfg
+++ b/server.cfg
@@ -18,6 +18,9 @@ gamemodetext Transportation / Trucking
 weburl www.sa-mp.com
 maxplayers 50
 
+# Logging
+logtimeformat [%d/%m/%Y %H:%M:%S]
+
 # Networking
 # bind 123.456.789.000
 port 7777
