Update network settings
Use default values, allow uncomment to easily change IP address or port.

--- a/server.cfg
+++ b/server.cfg
@@ -20,8 +20,8 @@ maxplayers 50
 logtimeformat [%d/%m/%Y %H:%M:%S]
 
 # Networking
-# bind 123.456.789.000
-port 7777
+# bind 127.0.0.1
+# port 7777
 
 # NPC
 maxnpc 0
