Update server information

--- a/server.cfg
+++ b/server.cfg
@@ -9,11 +9,11 @@ filterscripts gl_realtime gl_actions
 plugins sscanf streamer
 
 # Server browser
-hostname PowerPC603 Trucking Server
+hostname PPC-Trucking V1.2
 language English
 mapname San Andreas
-gamemodetext Transportation / Trucking
-weburl www.sa-mp.com
+gamemodetext PPC Trucking by PowerPC603
+weburl github.com/PPC-Trucking/V1
 maxplayers 50
 
 # Logging
